# sccloud-v2

./: .env.example  .env.server  .gitignore  PIPELINE_IMPLEMENTATION_GUIDE.md  README.md  docker-compose.dev.yml  docker-compose.server.yml  docker-compose.yml  sccloud_dev_handover.md  tmp_fix.py  tmp_resize.py  tmp_th.py
backend/: Dockerfile  pyproject.toml  test.db
backend/app/: __init__.py  config.py  main.py
backend/app/admin/: router.py
backend/app/auth/: __init__.py  deps.py  router.py  service.py
backend/app/convert/: __init__.py  router.py
backend/app/db/: __init__.py  models.py
backend/app/pipeline/: executor.py  router.py
backend/app/projects/: __init__.py  router.py
backend/app/tasks/: __init__.py  router.py
backend/app/upload/: __init__.py  router.py
backend/app/utils/: __init__.py  marker_match.py  progress_syncer.py  r_bridge.py
backend/app/ws/: __init__.py  manager.py  router.py
backend/data/cellmakers/: convert.py  mouse_markers.tsv
data/: sccloud_v2_dump.sql
frontend/: .dockerignore  Dockerfile  next.config.ts  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/app/components/: AddSampleDropdown.tsx  AnnotateResult.tsx  AuthModal.tsx  FileUploadModal.tsx  GeneAutocomplete.tsx  GeneExpressionPopup.tsx  (+13 more)
nginx/: nginx.conf
r-engine/: Dockerfile  install_packages.R  plumber.R
r-engine/R/: data_plot.R  data_processing.R  data_summary.R  gene_id_convert.R  utils.R
r-engine/data/examples/: example.cellAnno.txt  example.marker.txt
scratch/: test_helpers.R
tests/: test_api.sh
(+20 files in other folders)
